--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,22 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-windows = { version = "0.61.3", features = [
-    "Win32_Foundation",
-    "Win32_Security",
-    "Win32_Security_Authentication_Identity",
-    "Win32_Security_Cryptography",
-    "Win32_Security_Cryptography_UI",
-    "Win32_System_Threading",
-    "Win32_System_ProcessStatus",
-    "Win32_System_Diagnostics_ToolHelp",
-    "Win32_System_Memory",
-    "Win32_System_SystemInformation",
-    "Win32_Storage_FileSystem",
-    "Win32_UI_Shell",
-    "Win32_System_LibraryLoader",
-    "Wdk_System_SystemServices",
-] }
 aes = "0.8"
 aes-gcm = "0.10.3"
 cbc = "0.1"
@@ -39,4 +23,25 @@ pbkdf2 = "0.12.2"
 hmac = "0.12.1"
 sha1 = "0.10.6"
 sha2 = "0.10.9"
-directories = "5.0"
+directories = "6.0.0"
+
+[target.'cfg(target_os = "macos")'.dependencies]
+binarycookies = "0.1.3"
+
+[target.'cfg(windows)'.dependencies]
+windows = { version = "0.61.3", features = [
+    "Win32_Foundation",
+    "Win32_Security",
+    "Win32_Security_Authentication_Identity",
+    "Win32_Security_Cryptography",
+    "Win32_Security_Cryptography_UI",
+    "Win32_System_Threading",
+    "Win32_System_ProcessStatus",
+    "Win32_System_Diagnostics_ToolHelp",
+    "Win32_System_Memory",
+    "Win32_System_SystemInformation",
+    "Win32_Storage_FileSystem",
+    "Win32_UI_Shell",
+    "Win32_System_LibraryLoader",
+    "Wdk_System_SystemServices",
+] }
