--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,16 @@ name = "browservoyage"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "browservoyage"
+path = "src/lib.rs"
+
+[[bin]]
+name = "browservoyage"
+path = "src/main.rs"
+
 [dependencies]
+clap = { version = "4.4", features = ["derive"] }
 aes = "0.8"
 aes-gcm = "0.10.3"
 cbc = "0.1"
@@ -18,6 +27,7 @@ thiserror = "2.0.12"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 color-eyre = "0.6.5"
+csv = "1.3"
 asn1-rs = "0.7.1"
 pbkdf2 = "0.12.2"
 hmac = "0.12.1"
