--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,4 +54,5 @@ windows = { version = "0.61.3", features = [
     "Win32_UI_Shell",
     "Win32_System_LibraryLoader",
     "Wdk_System_SystemServices",
+    "Win32_System_WindowsProgramming",
 ] }
